PageCursor: fix z-index

--- a/apps/react-components/src/styles/components/PageCursor/index.scss
+++ b/apps/react-components/src/styles/components/PageCursor/index.scss
@@ -14,7 +14,7 @@
   left: 0;
   width: 0;
   height: 0;
-  z-index: 999;
+  z-index: 9999;
   pointer-events: none;
 
   will-change: transform;
